--- a/build_erp_frontend/package.json
+++ b/build_erp_frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/dotenv": "^6.1.1",
     "axios": "^1.10.0",
