--- a/build_erp_frontend/package.json
+++ b/build_erp_frontend/package.json
@@ -14,6 +14,7 @@
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/dotenv": "^6.1.1",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "jwt-decode": "^4.0.0",
@@ -23,6 +24,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
