--- a/build_erp_frontend/package.json
+++ b/build_erp_frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-google-maps/api": "^2.20.7",
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/dotenv": "^6.1.1",
@@ -18,9 +19,11 @@
     "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.522.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
@@ -30,6 +33,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/leaflet": "^1.9.20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/redux-persist": "^4.0.0",
