--- a/build_erp_backend/package.json
+++ b/build_erp_backend/package.json
@@ -16,6 +16,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/express-fileupload": "^1.5.1",
     "@types/express-session": "^1.18.2",
+    "@types/ioredis": "^4.28.10",
     "@types/nodemailer": "^6.4.17",
     "@types/redis": "^4.0.10",
     "bcrypt": "^6.0.0",
@@ -27,6 +28,7 @@
     "express-fileupload": "^1.5.2",
     "express-session": "^1.18.1",
     "heroicons": "^2.2.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "morgan": "^1.10.1",
