--- a/build_erp_backend/package.json
+++ b/build_erp_backend/package.json
@@ -39,6 +39,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.1",
+    "stripe": "^18.5.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
@@ -53,6 +54,7 @@
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/socket.io": "^3.0.1",
+    "@types/stripe": "^8.0.416",
     "@types/winston": "^2.4.4",
     "eslint": "^9.34.0",
     "eslint-plugin-react": "^7.37.5",
