--- a/build_erp_frontend/package.json
+++ b/build_erp_frontend/package.json
@@ -14,6 +14,8 @@
     "@react-google-maps/api": "^2.20.7",
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "@stripe/react-stripe-js": "^4.0.2",
+    "@stripe/stripe-js": "^7.9.0",
     "@types/dotenv": "^6.1.1",
     "@types/recharts": "^1.8.29",
     "axios": "^1.10.0",
