--- a/build_erp_frontend/package.json
+++ b/build_erp_frontend/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "dotenv": "^16.5.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.522.0",
@@ -38,6 +40,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@tailwindcss/postcss": "^4.1.12",
+    "@types/jspdf": "^1.3.3",
     "@types/jwt-decode": "^2.2.1",
     "@types/leaflet": "^1.9.20",
     "@types/react": "^19.1.2",
